--- a/CodeAdvisor/Properties/Resources.resx
+++ b/CodeAdvisor/Properties/Resources.resx
@@ -145,6 +145,12 @@
   <data name="java_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\java_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="text_x_csharp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\text_x_csharp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="text_x_csharp1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\text_x_csharp.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="text_x_java" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\text_x_java.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
