--- a/CodeAdvisor/Properties/Resources.resx
+++ b/CodeAdvisor/Properties/Resources.resx
@@ -172,4 +172,7 @@
   <data name="start_here_gnome_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\start_here_gnome_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CONTACT_SERVER" xml:space="preserve">
+    <value>http://localhost:9000/search</value>
+  </data>
 </root>
