--- a/CodeAdvisor/Properties/Resources.resx
+++ b/CodeAdvisor/Properties/Resources.resx
@@ -175,4 +175,13 @@
   <data name="CONTACT_SERVER" xml:space="preserve">
     <value>http://localhost:9000/search</value>
   </data>
+  <data name="gtk_refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gtk_refresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TAB_ANSWER" xml:space="preserve">
+    <value>Answers</value>
+  </data>
+  <data name="TAB_LINK" xml:space="preserve">
+    <value>Link</value>
+  </data>
 </root>
