--- a/CodeAdvisor/Properties/Resources.resx
+++ b/CodeAdvisor/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="gtk_refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gtk_refresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="network_server" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\network_server.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="TAB_ANSWER" xml:space="preserve">
     <value>Answers</value>
   </data>
